# nfs-walker

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile.musl  Dockerfile.rocky  Dockerfile.static-builder  HANDOFF.md  HANDOFF_STREAMING_READDIR.md  INCREMENTAL_SCAN_SPEC.md  LIBNFS.md  LIBNFS_STREAMING_BUG.md  LIBNFS_STREAMING_READDIR_EOF_BUG.md  Makefile  README.md  benchmark.sh  build.rs  narrow-deep-prob.md
.cargo/: config.toml
all.rocks/: 000019.sst  000022.sst  000111.sst  IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
benches/: walker_bench.rs
design/: parallel_implementation.md
docs/: BUILDING.md  HANDOFF-fh-cache.md  QUERY_ROCKSDB.md  QUERY_SQLITE.md
nfs-jogger/: Cargo.toml  README.md  build.rs
nfs-jogger/src/: config.rs  error.rs  lib.rs  main.rs
nfs-jogger/src/bundle/: mod.rs  types.rs
nfs-jogger/src/coordinator/: manager.rs  mod.rs
nfs-jogger/src/discovery/: mod.rs  scanner.rs
nfs-jogger/src/nfs/: mod.rs
nfs-jogger/src/queue/: mod.rs  redis_queue.rs
nfs-jogger/src/rocksdb/: mod.rs
nfs-jogger/src/worker/: mod.rs  processor.rs
patches/: README.md  libnfs-all-optimizations.patch  libnfs-vast-extensions.patch
src/: config.rs  error.rs  lib.rs  main.rs  progress.rs
src/content/: checksum.rs  filetype.rs  mod.rs
src/db/: mod.rs  parquet_writer.rs  schema.rs  writer.rs
src/nfs/: async_stat.rs  bindings.rs  connection.rs  dns_resolver.rs  mod.rs  pool.rs  types.rs  wrapper.h
src/parquet/: convert.rs  mod.rs  schema.rs
src/previous/: Cargo.toml  async_coordinator.rs  async_stat.rs  cookie_debug.rs  coordinator.rs  fast_walker.rs  main.rs  parallel_stat.rs  parquet_writer.rs  pool.rs  skinny_stream_test.rs  unified_writer.rs  worker.rs  writer.rs
src/rocksdb/: convert.rs  mod.rs  reader.rs  schema.rs  stats.rs  writer.rs
src/server/: catalog.rs  context.rs  executor.rs  mod.rs  routes.rs
src/walker/: async_coordinator.rs  async_walker.rs  coordinator.rs  fast_walker.rs  mod.rs  queue.rs  simple.rs  worker.rs
tests/: integration_tests.rs
tools/: validate_dtpref_c
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  queries.ts  types.ts
web/src/components/charts/: AreaChart.tsx  BarChart.tsx  HorizontalBarChart.tsx  PieChart.tsx
web/src/components/data/: DataTable.tsx  MetricCard.tsx  MetricCardGrid.tsx  QueryMeta.tsx
web/src/components/layout/: ScanSelector.tsx  Sidebar.tsx  TopBar.tsx
web/src/components/shared/: EmptyState.tsx  ErrorBanner.tsx  LoadingSpinner.tsx
web/src/context/: ScanContext.tsx
web/src/hooks/: useBatchQueries.ts  useScan.ts
web/src/lib/: colors.ts  constants.ts  format.ts
web/src/pages/: CapacityPage.tsx  DirectoriesPage.tsx  FilesPage.tsx  OverviewPage.tsx  OwnershipPage.tsx  QueryExplorerPage.tsx
