[package]
name = "nfs-walker"
version = "0.1.0"
edition = "2021"
authors = ["VAST Data"]
description = "Simple NFS filesystem walker with SQLite output"
license = "MIT"
readme = "README.md"
keywords = ["nfs", "filesystem", "walker", "scanner"]
categories = ["command-line-utilities", "filesystem"]

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb", "dep:bincode", "dep:serde"]

[dependencies]
# CLI parsing with derive macros
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# SQLite with bundled for static linking
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Concurrency primitives - crossbeam is battle-tested
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress and display
indicatif = "0.17"
humansize = "2"
console = "0.15"

# Utilities
num_cpus = "1"
regex = "1"
chrono = "0.4"
ctrlc = "3"

# libc for NFS FFI types
libc = "0.2"

# RocksDB support (optional, enabled via feature flag)
rocksdb = { version = "0.22", optional = true, default-features = false, features = ["lz4", "zstd"] }
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }


[build-dependencies]
# pkg-config is used to find libnfs and emit linker flags
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nfs-walker"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1