[package]
name = "nfs-jogger"
version = "0.1.0"
edition = "2021"
authors = ["VAST Data"]
description = "Distributed NFS filesystem walker for massive data migrations and indexing"
license = "MIT"
readme = "README.md"
keywords = ["nfs", "filesystem", "distributed", "migration", "indexing"]
categories = ["command-line-utilities", "filesystem"]

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb", "dep:bincode"]

[dependencies]
# CLI parsing with derive macros
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# SQLite with bundled for static linking
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Concurrency primitives - crossbeam is battle-tested
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress and display
indicatif = "0.17"
humansize = "2"
console = "0.15"

# Utilities
num_cpus = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3"
hostname = "0.4"

# libc for NFS FFI types
libc = "0.2"

# Serialization (required for distributed messaging)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "1.3", optional = true }

# Redis for distributed queue
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Async runtime for Redis
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# UUID for bundle and worker identification
uuid = { version = "1", features = ["v4", "serde"] }

# Async trait support
async-trait = "0.1"

# RocksDB support (optional, enabled via feature flag)
rocksdb = { version = "0.22", optional = true, default-features = false, features = ["lz4", "zstd"] }

[build-dependencies]
# pkg-config is used to find libnfs and emit linker flags
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nfs-jogger"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
