[package]
name = "nfs-walker"
version = "0.1.0"
edition = "2021"
authors = ["VAST Data"]
description = "High-performance NFS filesystem walker with SQLite output"
license = "MIT"
readme = "README.md"
keywords = ["nfs", "filesystem", "walker", "scanner"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# CLI parsing with derive macros
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# SQLite with bundled for static linking
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
async-channel = "2"

# Arrow and Parquet for columnar output
arrow = { version = "53", default-features = false, features = ["ipc"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap", "zstd"] }

# Concurrency primitives - crossbeam is battle-tested
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
parking_lot = "0.12"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress and display
indicatif = "0.17"
humansize = "2"
console = "0.15"

# Utilities
num_cpus = "1"
regex = "1"
glob = "0.3"
chrono = "0.4"
ctrlc = "3"

# libc for NFS FFI types
libc = "0.2"

[build-dependencies]
# For generating libnfs bindings
bindgen = "0.69"
pkg-config = "0.3"
cc = "1"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "walker_bench"
harness = false

[[bin]]
name = "nfs-walker"
path = "src/main.rs"

[[bin]]
name = "cookie-debug"
path = "src/bin/cookie_debug.rs"

[[bin]]
name = "skinny-stream-test"
path = "src/bin/skinny_stream_test.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[features]
default = []
# Enable io_uring support (Linux 5.1+)
io_uring = ["dep:io-uring"]

[dependencies.io-uring]
version = "0.6"
optional = true
